# runcli

./: README.md  pyproject.toml
src/runtools/runcli/: __init__.py  __main__.py  cfg.py  cli.py  common.py  demo_status.py  job.py  jobold.py  log.py  util.py
src/runtools/runcli/cmd/: clean.py  job.py
src/runtools/runcli/config/: runcli.toml
src/runtools/runcli/test/: testutil.py
src/runtoolsio/runcli/: __init__.py  cfg.py  log.py
test/: test_cfgfile.py
